LMS/force-app/main/default/objects/Loan_Repayent_Schedule__c/Loan_Repayent_Schedule__c.object-meta.xml
<CustomObject>
    <label>Loan Repayment Schedule</label>
    <nameField>
        <displayFormat>LRS-{0000000}</displayFormat>
        <label>Loan Repayment Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Repayment Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>