LMS/force-app/main/default/objects/Loan_Repayent_Schedule__c/fields/Additional_Capital_Repaid__c.field-meta.xml
<CustomField>
    <fullName>Additional_Capital_Repaid__c</fullName>
    <label>Additional Capital Repaid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>