LMS/force-app/main/default/objects/Loan_Repayent_Schedule__c/fields/Fixed_Monthly_Repayments_del__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Monthly_Repayments_del__c</fullName>
    <label>Fixed Monthly Repayments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>