LMS/force-app/main/default/objects/Loan_Repayent_Schedule__c/fields/Lease_price_del__c.field-meta.xml
<CustomField>
    <fullName>Lease_price_del__c</fullName>
    <label>Lease price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>