LMS/force-app/main/default/objects/Loan_Repayent_Schedule__c/fields/Loan_Account__c.field-meta.xml
<CustomField>
    <fullName>Loan_Account__c</fullName>
    <formula>Loan_Repayment_Option__r.Loan__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Account</label>
    <type>Text</type>
</CustomField>