LMS/force-app/main/default/objects/Loan_Repayent_Schedule__c/fields/Loan_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Number__c</fullName>
    <formula>Loan_Repayment_Option__r.Opportunity__r.Application_Number1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Application Number</label>
    <type>Text</type>
</CustomField>