LMS/force-app/main/default/objects/Loan_Repayent_Schedule__c/fields/Loan_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Loan_Calculator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Calculator</label>
    <referenceTo>MortgageCalc__Financial_Calculator__c</referenceTo>
    <relationshipName>Loan_Repayent_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>