LMS/force-app/main/default/objects/Loan_Repayent_Schedule__c/fields/Loan_Repayment_del__c.field-meta.xml
<CustomField>
    <fullName>Loan_Repayment_del__c</fullName>
    <label>Loan Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>