LMS/force-app/main/default/objects/Loan_Repayent_Schedule__c/fields/Loan_Repayment_Option__c.field-meta.xml
<CustomField>
    <fullName>Loan_Repayment_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Repayment Option</label>
    <referenceTo>Loan_Repayment_Option__c</referenceTo>
    <relationshipName>Loan_Repayent_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>