LMS/force-app/main/default/objects/Loan_Repayent_Schedule__c/fields/Monthly_lease_fee_del__c.field-meta.xml
<CustomField>
    <fullName>Monthly_lease_fee_del__c</fullName>
    <label>Monthly lease fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>