LMS/force-app/main/default/objects/Loan_Repayent_Schedule__c/fields/Payment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Transaction</label>
    <referenceTo>Payment_Transaction__c</referenceTo>
    <relationshipLabel>Loan Repayment Schedule</relationshipLabel>
    <relationshipName>Loan_Repayment_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>